[project]

name = "ant31box"
version = "0.2.4"
description = ""
readme = "README.md"
dynamic = ["dependencies"]
authors = [{email="2t.antoine@gmail.com", name="ant31"}]
packages = [{ include = "ant31box" }]
requires-python = ">=3.12,<4"
[tool.poetry.scripts]
ant31box = 'ant31box.main:main'

[tool.poetry.dependencies]


asyncio = "*"
pydantic = "*"
click = {version = "*", optional = true}
pyyaml = "*"

paramiko = "*"
sentry-sdk = {extras = ["fastapi"], version = "*", optional = true}
# temporalloop = {path = "../temporalrunner", develop = true}
aiohttp = {extras = ["speedups"], version = "*"}
aiohttp_requests = "*"
fastapi = {version = "*", extras = ["all"], optional = true}
typing-extensions = "*"

aiohttp-prometheus-exporter = "*"
starlette-exporter = {version="*", optional = true}
pydantic-settings = "*"

aiofiles = "*"
aioshutil = "*"
python-multipart = "*"
cachetools = "*"
boto3 = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
aioresponses = "*"
pyreadline = "*"
pylint-pydantic = "*"
requests = "*"
black = "*"
ipython = "*"
pylint = "*"
pyre-check = "*"
types-requests = "*"
isort = "*"
pytest = "*"
coverage = "*"
pytest-cov = "*"
bumpversion = "*"
pytest-ordering = "*"
pytest-asyncio = "*"
pyright = "*"
pytest-aioresponses = "*"
types-cachetools = "*"
moto = "*"
ruff = "*"
bump-my-version = "^1.1.2"

[tool.poetry.extras]
s3 = ["boto3"]
fastapi = ["starlette-exporter", "fastapi"]
sentry = ["sentry-sdk"]
click = ["click"]
[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest]
testpaths = "tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.2.4"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = 'ant31box/__init__.py'
search = "__version__ = \"{current_version}~ant31box\""
replace = "__version__ = \"{new_version}~ant31box\""
regex = true
