[project]

name = "ant31box"
version = "0.2.8"
description = ""
readme = "README.md"
dynamic = ["dependencies"]
authors = [{email="2t.antoine@gmail.com", name="ant31"}]
packages = [{ include = "ant31box" }]
requires-python = ">=3.12,<4"

dependencies = [
             "asyncio",
             "pydantic",
             "pyyaml",
             "paramiko",
             "aiohttp[speedups]",
             "aiohttp_requests",
             "typing-extensions",
             "aiohttp-prometheus-exporter",
             "pydantic-settings",
             "aiofiles",
             "aioshutil",
             "python-multipart",
             "cachetools"
]

[project.optional-dependencies]
fastapi = ["starlette-exporter", "fastapi[all]"]
sentry = ["sentry-sdk"]
s3 = ["boto3"]
cli = ["click<8.20", "rich", "typer"]
all = ["click<8.20", "rich", "typer", "boto3", "sentry-sdk", "starlette-exporter", "fastapi[all]"]

[tool.poetry.scripts]
ant31box = 'ant31box.main:main'


[tool.poetry.group.dev.dependencies]
aioresponses = "*"
pyreadline = "*"
pylint-pydantic = "*"
requests = "*"
black = "*"
ipython = "*"
pylint = "*"
pyre-check = "*"
types-requests = "*"
isort = "*"
pytest = "*"
coverage = "*"
pytest-cov = "*"
bumpversion = "*"
pytest-ordering = "*"
pytest-asyncio = "*"
pyright = "*"
pytest-aioresponses = "*"
types-cachetools = "*"
moto = "*"
ruff = "*"
bump-my-version = "^1.1.2"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest]
testpaths = "tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.2.8"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = 'ant31box/__init__.py'
search = "__version__ = \"{current_version}~ant31box\""
replace = "__version__ = \"{new_version}~ant31box\""
regex = true
